# redisops-playground

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging.py  main.py
app/api/: dependencies.py
app/api/routes/: cache.py  events.py  health.py  jobs.py  leaderboard.py  metrics.py  rate_limit.py  sessions.py
app/models/: cache.py  event.py  job.py  leaderboard.py  metrics.py  rate_limit.py  session.py
app/redis/: __init__.py  client.py  events.py  keys.py
app/services/: cache.py  events.py  jobs.py  leaderboard.py  rate_limit.py  sessions.py
app/static/: dashboard.html
docs/: architecture.md  redis-keys.md  redis-patterns.md
scripts/: check.cmd  check.ps1
tests/: conftest.py  test_cache.py  test_events.py  test_health.py  test_integration.py  test_jobs.py  test_leaderboard.py  test_rate_limit.py  test_sessions.py  test_worker.py
worker/: main.py
worker/processors/: __init__.py  report.py
