[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "redisops-playground"
version = "0.1.0"
description = "A production-style Redis learning playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "pydantic-settings==2.10.1",
  "redis==6.4.0",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "fakeredis==2.30.3",
  "httpx==0.28.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
